--- a/distribution-popwindow-test.html
+++ b/distribution-popwindow-test.html
@@ -46,33 +46,52 @@
           <!-- 各品項與頁面數swiper -->
           <div class="swiper-and-page-group">
             <!-- 品項swiper -->
-            <div class="swiper mySwiper">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide"><a href="" class="all">全部｜All</a></div>
-                <div class="swiper-slide"><a href="">零食｜Snack</a></div>
-                <div class="swiper-slide"><a href="">冰品｜Ice</a></div>
-                <div class="swiper-slide"><a href="">飲品｜Drink</a></div>
-                <div class="swiper-slide"><a href="">食品｜Food</a></div>
-                <div class="swiper-slide"><a href="">甜點｜dessert</a></div>
-              </div>
-              <div class="swiper-button-next">
-                <img src="/img/commodity-next.svg" alt="下一個按鈕">
-              </div>
-              <div class="swiper-button-prev">
-                <img src="/img/commodity-prev.svg" alt="上一個按鈕">
+            <div class="content">
+              <div
+                class="mySwiper swiper-container swiper-container-horizontal"
+              >
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <a href="" title="品項分類" class="page-link">全部｜All</a>
+                  </div>
+                  <div class="swiper-slide">
+                    <a href="" title="品項分類" class="page-link">零食｜Snack</a>
+                  </div>
+                  <div class="swiper-slide">
+                    <a href="" title="品項分類" class="page-link">冰品｜Ice</a>
+                  </div>
+                  <div class="swiper-slide">
+                    <a href="" title="品項分類" class="page-link">飲品｜Drink</a>
+                  </div>
+                  <div class="swiper-slide">
+                    <a href="" title="品項分類" class="page-link">食品｜Food</a>
+                  </div>
+                  <div class="swiper-slide">
+                    <a href="" title="品項分類" class="page-link">甜點｜dessert</a>
+                  </div>
+                </div>
+                <div class="swiper-button-next">
+                  <img src="/img/commodity-next.svg" alt="下一個按鈕" />
+                </div>
+                <div class="swiper-button-prev">
+                  <img src="/img/commodity-prev.svg" alt="上一個按鈕" />
+                </div>
               </div>
             </div>
+
             <!-- 頁面數 -->
             <div class="page-up-and-page-down-group">
-              <a href="" class="page-up">
-                <img src="/img/previous.png" alt="上一頁小圖標">上一頁</a>
-              <a href="" class="page-1">1</a>
-              <a href="" class="page-2">2</a>
-              <a href="" class="page-3">3</a>
-              <a href="" class="page-4">4</a>
-              <a href="" class="page-5">5</a>
-              <a href="" class="page-down">下一頁
-                <img src="/img/next.png" alt="下一頁小圖標">
+              <a href="" class="page-up" title="上一個頁面">
+                <img src="/img/previous.png" alt="上一頁小圖標" />上一頁</a
+              >
+              <a href="" class="page-1" title="第一頁">1</a>
+              <a href="" class="page-2" title="第二頁">2</a>
+              <a href="" class="page-3" title="第三頁">3</a>
+              <a href="" class="page-4" title="第四頁">4</a>
+              <a href="" class="page-5" title="第五頁">5</a>
+              <a href="" class="page-down" title="下一個頁面"
+                >下一頁
+                <img src="/img/next.png" alt="下一頁小圖標" />
               </a>
             </div>
           </div>
@@ -87,14 +106,20 @@
                       alt="產品1"
                     />
                   </div>
-                  <div class="yellow-box"><img src="/img/add_for_ask.svg" alt="黃色詢問框"></div>
-                  <div class="product-background-hover">
-                    <a href=""  class="yellow-box-hover"><img src="/img/add_for_ask_hover.svg" alt="黃色詢問框hover"></a>
-                    <a href="" class="product-background-hover-more" onclick="openPopup(event)">MORE</a>
+                  <div class="yellow-box">
+                    <img src="/img/add_for_ask.svg" alt="黃色詢問框" />
                   </div>
-                </div> 
+                  <div class="product-background-hover open-pop-window">
+                    <a href="./popwindow.html" class="yellow-box-hover"
+                      ><img
+                        src="/img/add_for_ask_hover.svg"
+                        alt="黃色詢問框hover"
+                    /></a>
+                    <a href="" class="product-background-hover-more " title="更多商品資訊按鈕">MORE</a>
+                  </div>
+                </div>
               </div>
-              
+
               <div class="product-info">
                 <div class="product-title">老虎芝士流心雪糕</div>
                 <div class="product-title-en">
@@ -112,60 +137,18 @@
                       alt="產品1"
                     />
                   </div>
-                  <div class="yellow-box"><img src="/img/add_for_ask.svg" alt="黃色詢問框"></div>
-                  <div class="product-background-hover">
-                    <a href="" class="yellow-box-hover"><img src="/img/add_for_ask_hover.svg"  alt="黃色詢問框hover"></a>
-                    <a href="" class="product-background-hover-more" >MORE</a>
+                  <div class="yellow-box">
+                    <img src="/img/add_for_ask.svg" alt="黃色詢問框" />
                   </div>
-                </div> 
-              </div>
-              <div class="product-info">
-                <div class="product-title">老虎芝士流心雪糕</div>
-                <div class="product-title-en">
-                  Tiger Cheese Filling Black Sugar Ice Cream Bar
+                  <div class="product-background-hover">
+                    <a href="" class="yellow-box-hover" title="詢問加入購物車框"
+                      ><img
+                        src="/img/add_for_ask_hover.svg"
+                        alt="黃色詢問框hover"
+                    /></a>
+                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕" id="">MORE</a>
+                  </div>
                 </div>
-                <div class="product-id">冰品 | Ice</div>
-              </div>
-            </div>
-            <div class="product-group">
-              <div class="product-img-group">
-                <div class="product-background">
-                  <div class="product">
-                    <img
-                      src="/images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
-                      alt="產品1"
-                    />
-                  </div>
-                  <div class="yellow-box"><img src="/img/add_for_ask.svg" alt="黃色詢問框"></div>
-                  <div class="product-background-hover">
-                    <a href="" class="yellow-box-hover"><img src="/img/add_for_ask_hover.svg" alt="黃色詢問框hover"></a>
-                    <a href="" class="product-background-hover-more">MORE</a>
-                  </div>
-                </div> 
-              </div>
-              <div class="product-info">
-                <div class="product-title">老虎芝士流心雪糕</div>
-                <div class="product-title-en">
-                  Tiger Cheese Filling Black Sugar Ice Cream Bar
-                </div>
-                <div class="product-id">冰品 | Ice</div>
-              </div>
-            </div>
-            <div class="product-group">
-              <div class="product-img-group">
-                <div class="product-background">
-                  <div class="product">
-                    <img
-                      src="/images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
-                      alt="產品1"
-                    />
-                  </div>
-                  <div class="yellow-box"><img src="/img/add_for_ask.svg" alt="黃色詢問框"></div>
-                  <div class="product-background-hover">
-                    <a href="" class="yellow-box-hover"><img src="/img/add_for_ask_hover.svg" alt="黃色詢問框hover"></a>
-                    <a href="" class="product-background-hover-more">MORE</a>
-                  </div>
-                </div> 
               </div>
               <div class="product-info">
                 <div class="product-title">老虎芝士流心雪糕</div>
@@ -184,12 +167,18 @@
                       alt="產品1"
                     />
                   </div>
-                  <div class="yellow-box"><img src="/img/add_for_ask.svg" alt="黃色詢問框"></div>
-                  <div class="product-background-hover">
-                    <a href="" class="yellow-box-hover"><img src="/img/add_for_ask_hover.svg" alt="黃色詢問框hover"></a>
-                    <a href="" class="product-background-hover-more">MORE</a>
+                  <div class="yellow-box">
+                    <img src="/img/add_for_ask.svg" alt="黃色詢問框" />
                   </div>
-                </div> 
+                  <div class="product-background-hover">
+                    <a href="" class="yellow-box-hover" title="詢問加入購物車框"
+                      ><img
+                        src="/img/add_for_ask_hover.svg"
+                        alt="黃色詢問框hover"
+                    /></a>
+                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
+                  </div>
+                </div>
               </div>
               <div class="product-info">
                 <div class="product-title">老虎芝士流心雪糕</div>
@@ -208,12 +197,18 @@
                       alt="產品1"
                     />
                   </div>
-                  <div class="yellow-box"><img src="/img/add_for_ask.svg" alt="黃色詢問框"></div>
-                  <div class="product-background-hover">
-                    <a href="" class="yellow-box-hover"><img src="/img/add_for_ask_hover.svg" alt="黃色詢問框hover"></a>
-                    <a href="" class="product-background-hover-more">MORE</a>
+                  <div class="yellow-box">
+                    <img src="/img/add_for_ask.svg" alt="黃色詢問框" />
                   </div>
-                </div> 
+                  <div class="product-background-hover">
+                    <a href="" class="yellow-box-hover" title="詢問加入購物車框"
+                      ><img
+                        src="/img/add_for_ask_hover.svg"
+                        alt="黃色詢問框hover"
+                    /></a>
+                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
+                  </div>
+                </div>
               </div>
               <div class="product-info">
                 <div class="product-title">老虎芝士流心雪糕</div>
@@ -232,12 +227,18 @@
                       alt="產品1"
                     />
                   </div>
-                  <div class="yellow-box"><img src="/img/add_for_ask.svg" alt="黃色詢問框"></div>
-                  <div class="product-background-hover">
-                    <a href="" class="yellow-box-hover"><img src="/img/add_for_ask_hover.svg" alt="黃色詢問框hover"></a>
-                    <a href="" class="product-background-hover-more">MORE</a>
+                  <div class="yellow-box">
+                    <img src="/img/add_for_ask.svg" alt="黃色詢問框" />
                   </div>
-                </div> 
+                  <div class="product-background-hover">
+                    <a href="" class="yellow-box-hover" title="詢問加入購物車框"
+                      ><img
+                        src="/img/add_for_ask_hover.svg"
+                        alt="黃色詢問框hover"
+                    /></a>
+                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
+                  </div>
+                </div>
               </div>
               <div class="product-info">
                 <div class="product-title">老虎芝士流心雪糕</div>
@@ -256,12 +257,78 @@
                       alt="產品1"
                     />
                   </div>
-                  <div class="yellow-box"><img src="/img/add_for_ask.svg" alt="黃色詢問框"></div>
-                  <div class="product-background-hover">
-                    <a href="" class="yellow-box-hover"><img src="/img/add_for_ask_hover.svg" alt="黃色詢問框hover"></a>
-                    <a href="" class="product-background-hover-more">MORE</a>
+                  <div class="yellow-box">
+                    <img src="/img/add_for_ask.svg" alt="黃色詢問框" />
                   </div>
-                </div> 
+                  <div class="product-background-hover">
+                    <a href="" class="yellow-box-hover" title="詢問加入購物車框"
+                      ><img
+                        src="/img/add_for_ask_hover.svg"
+                        alt="黃色詢問框hover"
+                    /></a>
+                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
+                  </div>
+                </div>
+              </div>
+              <div class="product-info">
+                <div class="product-title">老虎芝士流心雪糕</div>
+                <div class="product-title-en">
+                  Tiger Cheese Filling Black Sugar Ice Cream Bar
+                </div>
+                <div class="product-id">冰品 | Ice</div>
+              </div>
+            </div>
+            <div class="product-group">
+              <div class="product-img-group">
+                <div class="product-background">
+                  <div class="product">
+                    <img
+                      src="/images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
+                      alt="產品1"
+                    />
+                  </div>
+                  <div class="yellow-box">
+                    <img src="/img/add_for_ask.svg" alt="黃色詢問框" />
+                  </div>
+                  <div class="product-background-hover">
+                    <a href="" class="yellow-box-hover" title="詢問加入購物車框"
+                      ><img
+                        src="/img/add_for_ask_hover.svg"
+                        alt="黃色詢問框hover"
+                    /></a>
+                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
+                  </div>
+                </div>
+              </div>
+              <div class="product-info">
+                <div class="product-title">老虎芝士流心雪糕</div>
+                <div class="product-title-en">
+                  Tiger Cheese Filling Black Sugar Ice Cream Bar
+                </div>
+                <div class="product-id">冰品 | Ice</div>
+              </div>
+            </div>
+            <div class="product-group">
+              <div class="product-img-group">
+                <div class="product-background">
+                  <div class="product">
+                    <img
+                      src="/images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
+                      alt="產品1"
+                    />
+                  </div>
+                  <div class="yellow-box">
+                    <img src="/img/add_for_ask.svg" alt="黃色詢問框" />
+                  </div>
+                  <div class="product-background-hover">
+                    <a href="" class="yellow-box-hover" title="詢問加入購物車框"
+                      ><img
+                        src="/img/add_for_ask_hover.svg"
+                        alt="黃色詢問框hover"
+                    /></a>
+                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
+                  </div>
+                </div>
               </div>
               <div class="product-info">
                 <div class="product-title">老虎芝士流心雪糕</div>
@@ -281,12 +348,18 @@
                       alt="產品1"
                     />
                   </div>
-                  <div class="yellow-box"><img src="/img/add_for_ask.svg" alt="黃色詢問框"></div>
-                  <div class="product-background-hover">
-                    <a href="" class="yellow-box-hover"><img src="/img/add_for_ask_hover.svg" alt="黃色詢問框hover"></a>
-                    <a href="" class="product-background-hover-more">MORE</a>
+                  <div class="yellow-box">
+                    <img src="/img/add_for_ask.svg" alt="黃色詢問框" />
                   </div>
-                </div> 
+                  <div class="product-background-hover">
+                    <a href="" class="yellow-box-hover" title="詢問加入購物車框"
+                      ><img
+                        src="/img/add_for_ask_hover.svg"
+                        alt="黃色詢問框hover"
+                    /></a>
+                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
+                  </div>
+                </div>
               </div>
               <div class="product-info">
                 <div class="product-title">老虎芝士流心雪糕</div>
@@ -304,20 +377,19 @@
           <!-- 頁面數 -->
 
           <div class="page-up-and-page-down-group-buttom">
-            <a href="" class="page-up">
-              <img src="/img/previous.png" alt="上一頁小圖標">上一頁</a>
-            <a href="" class="page-1">1</a>
-            <a href="" class="page-2">2</a>
-            <a href="" class="page-3">3</a>
-            <a href="" class="page-4">4</a>
-            <a href="" class="page-5">5</a>
-            <a href="" class="page-down">下一頁
-              <img src="/img/next.png" alt="下一頁小圖標">
+            <a href="" class="page-up" title="上一個頁面">
+              <img src="/img/previous.png" alt="上一頁小圖標" />上一頁</a
+            >
+            <a href="" class="page-1" title="第一頁">1</a>
+            <a href="" class="page-2" title="第二頁">2</a>
+            <a href="" class="page-3" title="第三頁">3</a>
+            <a href="" class="page-4" title="第四頁">4</a>
+            <a href="" class="page-5" title="第五頁">5</a>
+            <a href="" class="page-down" title="下一個頁面"
+              >下一頁
+              <img src="/img/next.png" alt="下一頁小圖標" />
             </a>
           </div>
-
-
-
         </div>
       </div>
     </section>
@@ -329,10 +401,29 @@
     <script>
       var swiper = new Swiper(".mySwiper", {
         slidesPerView: 4,
-        spaceBetween: -40,
         navigation: {
           nextEl: ".swiper-button-next",
           prevEl: ".swiper-button-prev",
+        },
+        breakpoints: {
+          320:{
+            slidesPerView: 1,
+          },
+          510: {
+            slidesPerView: 2,
+          },
+          768:{
+            slidesPerView: 3,
+          },
+          832: {
+            slidesPerView: 4,
+          },
+          1200: {
+            slidesPerView: 4,
+          },
+          1920: {
+            slidesPerView: 4,
+          },
         },
       });
     </script>
@@ -374,7 +465,7 @@
       <div class="container">
           <div class="pop-window-content">
               <div class="pop-window-close">
-                  <a class="close" href="#" onclick="closePopup(event)"></a>
+                  <a class="close close-pop-window" href="#" onclick="closePopup(event)"></a>
               </div>
               <div class="pop-window-header">
                   <div class="pop-window-title">
