distribution id update

--- a/distribution.html
+++ b/distribution.html
@@ -22,7 +22,7 @@
     <!-- nav bar -->
     <header></header>
     <!-- 內容頁 -->
-    <section>
+    <section id="distribution">
       <div class="main">
         <div class="container">
           <!-- 產品經銷 - 全部選取按鈕 -->
