--- a/distribution-popwindow-test.html
+++ b/distribution-popwindow-test.html
@@ -109,7 +109,7 @@
                   <div class="yellow-box">
                     <img src="/img/add_for_ask.svg" alt="黃色詢問框" />
                   </div>
-                  <div class="product-background-hover open-pop-window">
+                  <div class="product-background-hover open-pop-window" id="">
                     <a href="./popwindow.html" class="yellow-box-hover"
                       ><img
                         src="/img/add_for_ask_hover.svg"
@@ -140,7 +140,7 @@
                   <div class="yellow-box">
                     <img src="/img/add_for_ask.svg" alt="黃色詢問框" />
                   </div>
-                  <div class="product-background-hover">
+                  <div class="product-background-hover" id="">
                     <a href="" class="yellow-box-hover" title="詢問加入購物車框"
                       ><img
                         src="/img/add_for_ask_hover.svg"
