註解小更新

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="about-card-group-container">
                     <div class="about-card-group-text-animation-top" data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="800">
                         <div class="about-card-group-img">
-                            <img src="./images/about/icon4.png">
+                            <img src="./images/about/icon4.png" alt="關於我們心logo">
                         </div>
                         <div class="about-card-group-text">
                             <h2>老虎堂 ｜ 虎堂初心 Original Intention</h2>
@@ -96,7 +96,7 @@
                     <div class="about-card-group-text-animation-bottom" data-aos="fade-up"
                         data-aos-anchor-placement="center-bottom" data-aos-duration="800">
                         <div class="about-card-group-img">
-                            <img src="./images/about/icon5.png">
+                            <img src="./images/about/icon5.png" alt="關於我們杯子logo">
                         </div>
                         <div class="about-card-group-text">
                             <h2>老虎堂 ｜ 虎糖特色 Feature Of Product</h2>
@@ -114,14 +114,14 @@
             </div>
             <picture class="cloud-left" data-aos="fade-left" data-aos-once="true" data-aos-duration="3000"
                 data-aos-delay="500" data-aos-offset="600">
-                <img src="./images/background_img/left_cloud_bg.webp">
+                <img src="./images/background_img/left_cloud_bg.webp" alt="雲彩背景左">
             </picture>
             <picture class="cloud-right" data-aos="fade-right" data-aos-once="true" data-aos-duration="3000"
                 data-aos-delay="500" data-aos-offset="600">
-                <img src="./images/background_img/right_cloud_bg.webp">
+                <img src="./images/background_img/right_cloud_bg.webp" alt="雲彩背景右">
             </picture>
             <picture class="about-us-scroll-img">
-                <img src="./images/background_img/logo_black.webp">
+                <img src="./images/background_img/logo_black.webp" alt="老虎堂背景">
             </picture>
         </section>
 
@@ -202,11 +202,11 @@
                                     <div class="img-w-h-border-img">
                                         <img class="product-img"
                                             src="./images/product/1668998205a2557a7b2e94197ff767970b67041697.jpg"
-                                            alt="">
-                                        <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
+                                            alt="產品圖片">
+                                        <img class="ask-icon" src="./img/add_for_ask.svg" alt="黃色加入以詢問">
                                         <div class="product-img-hover">
-                                            <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
-                                            <a href="./distribution.html" class="commodity-more-button btn">
+                                            <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="黃色加入以詢問">
+                                            <a href="./distribution.html" class="commodity-more-button btn" title="">
                                                 MORE
                                             </a>
                                         </div>
@@ -227,10 +227,10 @@
                                     <div class="img-w-h-border-img">
                                         <img class="product-img"
                                             src="./images/product/165899031442a0e188f5033bc65bf8d78622277c4e.jpg"
-                                            alt="">
-                                        <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
+                                            alt="產品圖片">
+                                        <img class="ask-icon" src="./img/add_for_ask.svg" alt="黃色加入以詢問">
                                         <div class="product-img-hover">
-                                            <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
+                                            <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="黃色加入以詢問">
                                             <a href="./popwindow.html" class="commodity-more-button btn">
                                                 MORE
                                             </a>
@@ -252,10 +252,10 @@
                                     <div class="img-w-h-border-img">
                                         <img class="product-img"
                                             src="./images/product/165899100742a0e188f5033bc65bf8d78622277c4e.jpg"
-                                            alt="">
-                                        <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
+                                            alt="產品圖片">
+                                        <img class="ask-icon" src="./img/add_for_ask.svg" alt="黃色加入以詢問">
                                         <div class="product-img-hover">
-                                            <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
+                                            <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="黃色加入以詢問">
                                             <a href="./distribution-confirm.html" class="commodity-more-button btn">
                                                 MORE
                                             </a>
@@ -277,10 +277,10 @@
                                     <div class="img-w-h-border-img">
                                         <img class="product-img"
                                             src="./images/product/1658908734cfecdb276f634854f3ef915e2e980c31.jpg"
-                                            alt="">
-                                        <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
+                                            alt="產品圖片">
+                                        <img class="ask-icon" src="./img/add_for_ask.svg" alt="黃色加入以詢問">
                                         <div class="product-img-hover">
-                                            <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
+                                            <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="黃色加入以詢問">
                                             <a href="./chiu.html" class="commodity-more-button btn">
                                                 MORE
                                             </a>
@@ -302,10 +302,10 @@
                                     <div class="img-w-h-border-img">
                                         <img class="product-img"
                                             src="./images/product/16589912415878a7ab84fb43402106c575658472fa.jpg"
-                                            alt="">
-                                        <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
+                                            alt="產品圖片">
+                                        <img class="ask-icon" src="./img/add_for_ask.svg" alt="黃色加入以詢問">
                                         <div class="product-img-hover">
-                                            <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
+                                            <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="黃色加入以詢問">
                                             <a href="https://tigersugar.com/" class="commodity-more-button btn">
                                                 MORE
                                             </a>
@@ -327,10 +327,10 @@
                                     <div class="img-w-h-border-img">
                                         <img class="product-img"
                                             src="./images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
-                                            alt="">
-                                        <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
+                                            alt="產品圖片">
+                                        <img class="ask-icon" src="./img/add_for_ask.svg" alt="黃色加入以詢問">
                                         <div class="product-img-hover">
-                                            <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
+                                            <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="黃色加入以詢問">
                                             <a href="" class="commodity-more-button btn">
                                                 MORE
                                             </a>
@@ -351,10 +351,10 @@
                     </div>
                     <div class="swiper-button-product">
                         <div class="swiper-button-next">
-                            <img class="next-prev-img" src="./img/commodity-next.svg" alt="">
+                            <img class="next-prev-img" src="./img/commodity-next.svg" alt="swiper下一個按鈕">
                         </div>
                         <div class="swiper-button-prev">
-                            <img class="next-prev-img" src="./img/commodity-prev.svg" alt="">
+                            <img class="next-prev-img" src="./img/commodity-prev.svg" alt="swiper上一個按鈕">
                         </div>
                     </div>
                     <a href="" class="distribution-area-button ">更多商品</a>
